# task_manager

./: README.md  docker-compose.yml  pyproject.toml
taskmanager/accounts/: urls.py  views.py
taskmanager/taskmanager/: api.py  settings.py  urls.py
taskmanager/tasks/: admin.py  converters.py  enums.py  middlewares.py  mixins.py  models.py  pagination.py  schemas.py  service.py  urls.py  views.py
taskmanager/tasks/api/: tasks.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20240130_0946.py  0003_auto_20240130_1012.py  0004_sprint_profile_epic_task_epic.py  0005_sprint_end_date_after_start_date.py  0006_task_status_check.py  0007_email_formsubmission_alter_task_options_and_more.py
taskmanager/tasks/templates/: 404.html
taskmanager/templates/: _footer.html  _header.html  base.html  help.html  home.html
taskmanager/templates/accounts/: custom_password_reset_email.html  login.html  password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm_form.html  password_reset_form.html  register.html
taskmanager/templates/tasks/: check_task.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
