[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Alan Kleber <alan.kleber@scalefast.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
